* minor fixes